--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "vue": "^2.6.11",
         "vue-router": "^3.1.6",
         "vuetify": "^2.2.11",
+        "vuetify-audio": "^0.3.2",
         "vuex": "^3.1.3"
     },
     "devDependencies": {
