--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "dependencies": {
         "axios": "^0.19.2",
         "core-js": "^3.6.4",
+        "firebase": "^7.14.2",
         "vue": "^2.6.11",
         "vue-router": "^3.1.6",
+        "vuelidate": "^0.7.5",
         "vuetify": "^2.2.11",
         "vuetify-audio": "^0.3.2",
         "vuex": "^3.1.3"
