--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     },
     "dependencies": {
         "axios": "^0.19.2",
+        "axios-jsonp": "^1.0.4",
         "core-js": "^3.6.4",
+        "fetch-jsonp": "^1.1.3",
         "firebase": "^7.14.2",
         "vue": "^2.6.11",
         "vue-router": "^3.1.6",
