Aggiunta estrazione e calcolo follower
Vengono estratti dal db sia gli utenti seguiti sia i follower del profilo, aggiunta possibilità di seguire o meno un profilo

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "trailingComma": "es5",
         "tabWidth": 4,
         "semi": false,
-        "singleQuote": true
+        "singleQuote": true,
+        "printWidth": 100
     }
 }
