--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "core-js": "^3.6.4",
         "fetch-jsonp": "^1.1.3",
         "firebase": "^7.14.2",
+        "swiper": "^5.4.3",
         "vue": "^2.6.11",
+        "vue-awesome-swiper": "^4.1.1",
         "vue-router": "^3.1.6",
         "vuelidate": "^0.7.5",
         "vuetify": "^2.2.11",
