Aggiunta sanificazione input, nuovi componenti
Sanificati input in ricerca, recensione e login/signup, form per login e signup divisi in componenti

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "firebase-admin": "^8.12.1",
         "firebase-functions": "^3.7.0",
         "http2": "^3.3.7",
+        "string-strip-html": "^4.5.0",
         "vue": "^2.6.11",
         "vue-router": "^3.3.4",
         "vuetify": "^2.3.2",
